--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ article {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 section {
@@ -42,11 +42,14 @@ h4,
 h5,
 h6,
 h7 {
-  font-family: serif;
+  font-family: Arial,
+    Helvetica,
+    sans-serif;
   font-weight: normal;
 }
 
-h1 {
+h1,
+h2 {
   text-align: center;
 }
 
@@ -64,7 +67,9 @@ nav a:hover {
 }
 
 nav h1 {
-  font-family: serif;
+  font-family: Arial,
+    Helvetica,
+    sans-serif;
   margin: 0 0 0.5em 0;
 }
 
@@ -75,19 +80,19 @@ General content elements and styles
 ol span {
   color: black;
   font-weight: normal;
-  font-family: sans-serif;
+  font-family: Arial,
+    Helvetica,
+    sans-serif;
   font-size: 0.84em;
 }
 
 ul span {
   color: black;
   font-weight: normal;
-  font-family: sans-serif;
+  font-family: Arial,
+    Helvetica,
+    sans-serif;
   font-size: 0.84em;
-}
-
-li {
-  margin-bottom: 2.5%;
 }
 
 blockquote {
@@ -124,7 +129,9 @@ nav.to-top a {
   color: royalblue;
   font-size: 0.8em;
   font-weight: bold;
-  font-family: sans-serif;
+  font-family: Arial,
+    Helvetica,
+    sans-serif;
 }
 
 nav.to-top a:hover {
@@ -141,7 +148,7 @@ General
 
   section {
     margin: 0 -0.5em 1em -0.5em;
-    padding: 0 0.5em 1em 0.5em;
+    padding: 1em 5% 1em 5%;
   }
 
   /*
@@ -163,7 +170,6 @@ Section headings
   h5,
   h6,
   h7 {
-    margin: 0.2em 0 0 1em;
     padding: 0.1em;
   }
 
@@ -177,7 +183,7 @@ Section headings
   }
 
   h3 {
-    font-size: 1.13em;
+    font-size: 1.17em;
   }
 
   h4 {
@@ -204,7 +210,9 @@ Navigation
   }
 
   nav a {
-    font-family: serif;
+    font-family: Arial,
+      Helvetica,
+      sans-serif;
   }
 
   nav a:hover {
@@ -222,7 +230,7 @@ General
 
   section {
     margin: 0 -0.5em 1em -0.5em;
-    padding: 2em 8% 2em 8%;
+    padding: 2em 5% 2em 5%;
   }
 
   /*
@@ -248,7 +256,6 @@ Section headings
   h5,
   h6,
   h7 {
-    margin: 0.8em 0 0 7%;
     padding: 0.2em;
   }
 
@@ -291,12 +298,13 @@ Navigation
   /* Nav bar */
 
   nav {
-    padding: 0 0 3.5em 0;
+    padding: 2em 5% 2em 5%;
     margin: 0 0 0 0;
   }
 
   nav h1 {
-    display: none; /* (display off-page?) */
+    display: none;
+    /* (display off-page?) */
   }
 
   nav ul {
@@ -319,6 +327,8 @@ Navigation
   nav a {
     font-size: 1.1em;
     font-weight: bold;
-    font-family: sans-serif;
+    font-family: Arial,
+      Helvetica,
+      sans-serif;
   }
 }
